--- a/src/views/products/formProducts.ejs
+++ b/src/views/products/formProducts.ejs
@@ -24,11 +24,11 @@
             <div class="control-formulario">
                 <div><label>Categoría</label></div>
                 <select name="categoria" class="control">
-                    <option value="bombones">Bombones</option>
-                    <option value="tabletas">Tabletas</option>
-                    <option value="helados">Helados</option>
-                    <option value="alfajores">Alfajores</option>
-                    <option value="mermeladas">Mermeladas</option>
+                    <option value="4">Bombones</option>
+                    <option value="6">Tabletas</option>
+                    <option value="3">Helados</option>
+                    <option value="1">Alfajores</option>
+                    <option value="2">Mermeladas</option>
                 </select>
             </div>
             <div class="foto-productos">
