--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -47,7 +47,7 @@
             <div class="foto-productos">
                 <div><label class="label-form">Foto de perfil</label></div>
                 <div class="contenedor-foto-producto">
-                    <input type="file" name="foto-usuario" accept=".jpg, .png, .svg, .jpeg" class="adjuntar">
+                    <input type="file" name="fotoUsuario" accept=".jpg, .png, .svg, .jpeg" class="adjuntar">
                 </div>
                 <span>.jpg, .png, .svg</span>
             </div>
