--- a/src/views/products/listProducts.ejs
+++ b/src/views/products/listProducts.ejs
@@ -16,15 +16,15 @@
             <div class="grilla">
                 <% for(let i = 0; i < productos.length; i++) {%>
                 <article>
-                    <% if(!productos[i].image){%>
-                        <a href="/products/<%= productos[i].id %>" class="hiper-fotos"><img  src="/img/popu-7.jpg" alt="Foto default" class='fotos-grilla'></a>
+                    <% if(!productos[i].imagen){%>
+                        <a href="/products/<%= productos[i].id_producto %>" class="hiper-fotos"><img  src="/img/popu-7.jpg" alt="Foto default" class='fotos-grilla'></a>
                     <%}else{%>
-                        <a href="/products/<%= productos[i].id %>" class="hiper-fotos"><img  src="img/product/<%= productos[i].image%>" alt="Foto Productos" class='fotos-grilla'></a>  
+                        <a href="/products/<%= productos[i].id_producto %>" class="hiper-fotos"><img  src="img/product/<%= productos[i].imagen%>" alt="Foto Productos" class='fotos-grilla'></a>  
                     <%}%>
                         <div class="info-producto-grilla">
                         <div class="truck-grilla"><i class="fa-solid fa-truck"></i></div>
-                        <div class="descripcion-grilla"><%= productos[i].name %></div>
-                        <div class="precios-grilla">$ <%= productos[i].price %></div>
+                        <div class="descripcion-grilla"><%= productos[i].nombre %></div>
+                        <div class="precios-grilla">$ <%= productos[i].precio_unidad %></div>
                     </div>
                 </article>
                 <%}%>
