--- a/src/views/users/listUsers.ejs
+++ b/src/views/users/listUsers.ejs
@@ -16,16 +16,18 @@
             <div class="grilla">
                 <% for(let i = 0; i < users.length; i++) {%>
                 <article>
-                    <% if(!users[i].image){%>
-                        <a href="/users/<%= users[i].id %>" class="hiper-fotos"><img  src="/img/users/foto-default.jpg" alt="Foto default" class='fotos-grilla'></a>
+                    <% if(!users[i].foto_de_perfil){%>
+                        <a href="/users/<%= users[i].id_usuario %>" class="hiper-fotos"><img  src="/img/users/foto-default.jpg" alt="Foto default" class='fotos-grilla'></a>
                     <%}else{%>
-                        <a href="/users/<%= users[i].id %>" class="hiper-fotos"><img  src="img/users/<%= users[i].image%>" alt="Foto json" class='fotos-grilla'></a>  
+                        <a href="/users/<%= users[i].id_usuario %>" class="hiper-fotos"><img  src="img/users/<%= users[i].image%>" alt="Foto json" class='fotos-grilla'></a>  
                     <%}%>
                         <div class="info-producto-grilla">
-                        <div class="descripcion-grilla"><%= users[i].id %></div> 
-                        <div class="descripcion-grilla"><%= users[i].name %> <%= users[i].apellido %></div>
-                        <div class="precios-grilla"><%= users[i].username %></div>
+                        <div class="descripcion-grilla"><%= users[i].id_usuario %></div> 
+                        <div class="descripcion-grilla"><%= users[i].nombre %>   <%= users[i].apellido %></div>
+                        <div class="precios-grilla"><%= users[i].usuario %></div>
                         <div class="precios-grilla"><%= users[i].email %></div>
+                        <div class="precios-grilla"><%= users[i].telefono %></div>
+                        <div class="precios-grilla"><%= users[i].ciudad %></div>
                         <form action="/users/<%= users[i].id %>?_method=DELETE" method="POST"><button type="submit">Borrar</button></form>
                         <a href="/users/<%= users[i].id%>/edit" class="boton-edit"><i class="fa-solid fa-pen-to-square"></i></a>
                         </div>
