Sprint 7 Validaciones Backend/Frontend

--- a/src/views/products/formProductsEdit.ejs
+++ b/src/views/products/formProductsEdit.ejs
@@ -61,6 +61,7 @@
     <footer>
         <%- include('../partials/footer.ejs') %>
     </footer> 
+    <script src="/js/validacionProducts.js"></script> 
 </body>
 </html>
 
