--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -10,34 +10,49 @@
         <%- include('../partials/nav-bar.ejs') %>
     </header>  
     <!--Formulario de registro-->
-    <form action="/register" method="POST" class="formulario" enctype="multipart/form-data">
+    <form action="/register" method="POST" class="formulario" enctype="multipart/form-data" id="register">
             <div class="nombre-apellido">
-                <input type="text" name="nombre" placeholder="Nombre(*)" class="nombre-r"  value="<%= locals.prev && prev.nombre ? prev.nombre : '' %>">
+                <input type="text" name="nombre" placeholder="Nombre(*)" class="nombre-r"  value="<%= locals.prev && prev.nombre ? prev.nombre : '' %>" id="nombre-usuario-register">
             </div>
+
             <div class="label">
                 <% if(locals.errors && errors.nombre){ %>
                     <label class="label-form-msgError">!!! <%= errors.nombre.msg %> !!!</label>
                     <%}%>
             </div>
+
             <div class="nombre-apellido">
-                <input type="text" name="apellido" placeholder="Apellido" class="nombre-r"  value="<%= locals.prev && prev.apellido ? prev.apellido : '' %>">
+                <input type="text" name="apellido" placeholder="Apellido" class="nombre-r"  value="<%= locals.prev && prev.apellido ? prev.apellido : '' %>" id="apellido-usuario-register">
             </div>
+
             <div class="label">
                 <% if(locals.errors && errors.apellido){ %>
                     <label class="label-form-msgError">!!! <%= errors.apellido.msg %> !!!</label>
                     <%}%>
             </div>
+
             <div class="nombre-usuario">
                 <input type="text" name="usuario" placeholder="Nombre de usuario(*)" class="usuario-r"  value="<%= locals.prev && prev.usuario? prev.usuario : '' %>">
             </div>
+
             <div class="label">
                 <% if(locals.errors && errors.usuario){ %>
                     <label class="label-form-msgError">!!! <%= errors.usuario.msg %> !!!</label>
                     <%}%>
             </div>
+
             <div class="e-mail">
-                <input type="text" name="email" placeholder="E-mail(*)" class="email-r"  value="<%= locals.prev && prev.email ? prev.email : '' %>">
+                <input type="text" name="email" placeholder="E-mail(*)" class="email-r"  value="<%= locals.prev && prev.email ? prev.email : '' %>" id="email-usuario-register">
             </div>
+
+            <div class="label">
+                <% if(typeof userNotLoggin === "undefined"){%>
+                    <h1></h1>
+                <%}else if(userNotLoggin){%>
+                    <label class="label-form-msgError">!!! Email en uso !!!</label>
+                <%}%>
+            </div>
+
             <div class="label">
                 <% if(locals.errors && errors.email){ %>
                     <label class="label-form-msgError">!!! <%= errors.email.msg %> !!!</label>
@@ -47,21 +62,29 @@
             <div class="foto-productos">
                 <div><label class="label-form">Foto de perfil</label></div>
                 <div class="contenedor-foto-producto">
-                    <input type="file" name="fotoUsuario" accept=".jpg, .png, .svg, .jpeg" class="adjuntar">
+                    <input type="file" name="fotoUsuario" accept=".jpg, .png, .jpeg, .gif" class="adjuntar" id="foto-usuario-register">
                 </div>
-                <span>.jpg, .png, .svg</span>
+                <span>.JPG, .JPEG, .PNG, .GIF</span>
             </div>
+            <div class="label">
+                <% if(locals.errors && errors.fotoUsuario){ %>
+                    <label class="label-form-msgError">!!!  <%= errors.fotoUsuario.msg %>  !!!</label>
+                    <%}%>
+            </div>
+
             <div class="fecha-div">
                 <div class="label">
                     <label class="label-form-r">Fecha de nacimiento</label>
                 </div>
-                <input type="date" name="fecha" placeholder="Fecha de nacimiento" class="fecha-r" >
+                <input type="date" name="fecha" placeholder="Fecha de nacimiento" class="fecha-r" value="<%= locals.prev && prev.fecha ? prev.fecha : '' %>" >
             </div>
             <div class="label">
                 <% if(locals.errors && errors.fecha){ %>
                     <label class="label-form-msgError">!!!  <%= errors.fecha.msg %>  !!!</label>
                     <%}%>
             </div>
+
+            
             <div class="domicilio-div">
                 <input type="text" name="domicilio" placeholder="Domicilio" class="domicilio-r" value="<%= locals.prev && prev.domicilio ? prev.domicilio : '' %>">
             </div>
@@ -73,13 +96,13 @@
             <div class="contraseña">
                 <div class="label-contraseña"><label class="label-form">Contraseña</label></div>
                 <div class="contenedor-contraseña">
-                    <input type="password" name="password" placeholder="Contraseña nueva(*)" class= "password-r" >
+                    <input type="password" name="password" placeholder="Contraseña nueva(*)" class= "password-r" id="contraseña-usuario">
                     <div class="label">
                         <% if(locals.errors && errors.password){ %>
                             <label class="label-form-msgError">!!!  <%= errors.password.msg %>  !!!</label>
                             <%}%>
                     </div>
-                    <input type="password" name="passwordConf" placeholder=" Confirmar contraseña(*)" class= "password-r" ><div class="label">
+                    <input type="password" name="passwordConf" placeholder=" Confirmar contraseña(*)" class= "password-r" ><div class="label" id="contraseña-usuario-register">
                         <% if(locals.errors && errors.passwordConf){ %>
                             <label class="label-form-msgError">!!!  <%= errors.passwordConf.msg %>  !!!</label>
                             <%}%>
@@ -96,6 +119,8 @@
                 </div>          
             </div>
     </form>
+
+    <script src="/js/validacionRegister.js"></script> 
     
     <footer class="footer-login">
         <%- include('../partials/footer.ejs') %>
