--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/css/normalize.css"> 
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/grilla.css">
 <script src="https://kit.fontawesome.com/c09ff292ee.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,3 +12,4 @@
 <link rel="stylesheet" href="/css/register.css">
 <link rel="stylesheet" href="/css/styleCart.css">
 <link rel="stylesheet" href="/css/productDetail.css">
+
