--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -12,12 +12,13 @@
             <img  src="/img/Logo.jpg" alt="Logo Vraiklat-769px^^">
         </div>   
     </div>
+    
     <!-- BUSCADOR-->    
     <div class="userLogin">
         <% if(typeof userLogin === "undefined"){%>
             <h1>Falta logear usuario</h1>
         <%}else{%>
-            <h1> Bienvenido <%=userLogin.username%></h1> 
+            <h1> Bienvenido <%=userLogin.nombre%></h1> 
         <%}%>
     </div>
     
@@ -40,7 +41,7 @@
             <% if(typeof userLogin === "undefined"){%>
                 <a href="/login"><i class="fa-solid fa-user"></i></a>
             <%}else{%>
-                <a href="/users/<%= userLogin.id%>/edit"><i class="fa-solid fa-user"></i></a> 
+                <a href="/users/<%= userLogin.id_usuario%>/edit"><i class="fa-solid fa-user"></i></a> 
             <%}%>
             
         </div>
