--- a/src/views/products/listProducts.ejs
+++ b/src/views/products/listProducts.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('../partials/head.ejs') %>
-    <link rel="stylesheet" href="./css/grilla.css">
+    <link rel="stylesheet" href="/css/grilla.css">
     <title>Productos</title>
 </head>
 <body>
