--- a/src/views/users/userEdit.ejs
+++ b/src/views/users/userEdit.ejs
@@ -10,7 +10,7 @@
         <%- include('../partials/nav-bar.ejs') %>
     </header>  
     <!--Formulario de registro-->
-    <form action="/users/:id/?_method=PUT" method="POST" class="formulario" enctype="multipart/form-data"> 
+    <form action="/users/<%= user.id_usuario%>?_method=PUT" method="POST" class="formulario" enctype="multipart/form-data"> 
             <button>Editar usuario</button>
             <div><label>ID del usuario</label></div>
             <div class="nombre-apellido">
@@ -34,8 +34,9 @@
             <div class="foto-productos">
                 <div><label class="label-form">Foto de perfil</label></div>
                 <div class="contenedor-foto-producto">
-                    <input type="file" name="foto-usuario" accept=".jpg, .png, .svg, .jpeg" class="adjuntar" value="<%= user.foto_de_perfil%>">
+                    <input type="file" name="foto-usuario" accept=".jpg, .png, .svg, .jpeg" class="adjuntar" placeholder="<%= user.foto_de_perfil%>">
                 </div>
+                <!-- value="<%= user.foto_de_perfil%>"  -->
                 <span>.jpg, .png, .svg</span>
             </div>
 
@@ -51,9 +52,10 @@
             <div class="contraseña">
                 <div class="label-contraseña"><label class="label-form">Contraseña</label></div>
                 <div class="contenedor-contraseña">
-                    <input type="password" name="password" placeholder="Contraseña nueva" class= "password-r" required minlength="8" value="<%= user.contraseña%>">
-                    <input type="password" name="password-conf" placeholder=" Confirmar contraseña" class= "password-r" required minlength="8" value="<%= user.contraseña%>">
-                </div> 
+                    <input type="password" name="password" placeholder="Contraseña nueva" class= "password-r">
+                    <input type="password" name="password-conf" placeholder=" Confirmar contraseña" class= "password-r">
+                </div>  
+                <!-- value="<%= user.contraseña%>" -->
             </div>
             <div class="contenedor-button">
                 <div class="contenedor-button-uno">
