--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,6 +16,10 @@
         
         
 <main>
+
+    <!-- <div class="banner-home">
+        <img src="/img/BANNER_QUE VAS A PEDIR.jpg" alt="Banner 2 Vraiklat">
+    </div> -->
         <!--PEDIDO HOY- 3 PRODUCTOS --->
         <section class="pedido-hoy">
             <h4 class="titular-pedido">¿Que vas a pedir hoy?</h4>
@@ -56,11 +60,19 @@
                         <a href="/products"><img class="fotos" src="/img/popu-1.jpg" alt="Foto 1"></a> 
                     <%}else{%>
                         <a href="/login"><img class="fotos" src="/img/popu-1.jpg" alt="Foto 1"></i></a>
-                    <%}%>   
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+                    <%}%> 
                     <div class="info-producto">
                         <div class="descripcion">Barra de chocolate</div>
                     </div>
+                    <div class="icon-preguntas"> 
+                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
+                    </div> 
+                    
+                    
+                    <!-- <div class="truck"><i class="fa-solid fa-truck"></i></div> ICONO CARRITO --> 
+
+
+                    
                 </article>
                 <article>
                     <% if(userLogin != undefined){%>
@@ -68,78 +80,73 @@
                     <%}else{%>
                         <a href="/login"><img class="fotos" src="/img/popu-2.jpg" alt="Foto 2"></a>
                     <%}%>
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">  
                         <div class="descripcion">Chocolate </div>
                     </div>
+                    <div class="icon-preguntas"> 
+                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
+                    </div> 
+            
+                    
                 </article>
                 <article>
                     <% if(userLogin != undefined){%>
-                        <a href="/products"> <img class="fotos" src="/img/popu-3.jpg" alt="Foto 3"></a>
+                        <a href="/products"> <img class="fotos" src="/img/_MG_8356 (1).jpg" alt="Foto 3"></a>
                     <%}else{%>
-                        <a href="/login"><img class="fotos" src="/img/popu-3.jpg" alt="Foto 3"></a>
-                    <%}%>    
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+                        <a href="/login"><img class="fotos" src="/img/_MG_8356 (1).jpg" alt="Foto 3"></a>
+                    <%}%>   
                     <div class="info-producto">                     
-                        <div class="descripcion">Tableta chocolate</div>
-                    </div>
+                        <div class="descripcion">Helado ddl</div>
+                    </div> 
+                    <div class="icon-preguntas"> 
+                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
+                    </div> 
+                    
+                    
                 </article>
                 <article>
                     <% if(userLogin != undefined){%>
                         <a href="/products"><img class="fotos" src="/img/popu-5.jpg" alt="Foto 4"></a>
                     <%}else{%>
                         <a href="/login"><img class="fotos" src="/img/popu-5.jpg" alt="Foto 4"></a>
-                    <%}%>                   
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+                    <%}%>    
                     <div class="info-producto">
                         <div class="descripcion">Copa helado</div>
-                    </div>           
+                    </div>    
+                    <div class="icon-preguntas"> 
+                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
+                    </div>             
+                    
                 </article>
                 <article>
                     <% if(userLogin != undefined){%>
-                        <a href="/products"><img class="fotos" src="/img/popu-4.jpg" alt="Foto 5"></a>
+                        <a href="/products"><img class="fotos" src="/img/21d91310-333e-4d96-b12f-5a54dea265fa.jpg" alt="Foto 5"></a>
                     <%}else{%>
-                        <a href="/login"><img class="fotos" src="/img/popu-4.jpg" alt="Foto 5"></a>
-                    <%}%>                   
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+                        <a href="/login"><img class="fotos" src="/img/21d91310-333e-4d96-b12f-5a54dea265fa.jpg" alt="Foto 5"></a>
+                    <%}%>  
                     <div class="info-producto">
-                        <div class="descripcion">Snack</div>
+                        <div class="descripcion">Tableta mil hojas</div>
+                    </div>       
+                    <div class="icon-preguntas"> 
+                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
                     </div>           
+
                 </article>
                 <article>
                     <% if(userLogin != undefined){%>
                         <a href="/products"><img class="fotos" src="/img/popu-6.jpg" alt="Foto 6"></a> 
                     <%}else{%>
                         <a href="/login"><img class="fotos" src="/img/popu-6.jpg" alt="Foto 6"></a>
-                    <%}%>               
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+                    <%}%>   
                     <div class="info-producto">
                         <div class="descripcion">Tableta</div>
+                    </div>        
+                    <div class="icon-preguntas"> 
+                        <img src="/img/iconos/cart.png" alt="carrito" class="cart-icono">
                     </div>           
+                    
+
                 </article>
-                <article>
-                    <% if(userLogin != undefined){%>
-                        <a href="/products"><img class="fotos" src="/img/popu-7.jpg" alt="Foto 7"></a>
-                    <%}else{%>
-                        <a href="/login"><img class="fotos" src="/img/popu-7.jpg" alt="Foto 7"></a>
-                    <%}%>                
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-                    <div class="info-producto">
-                        <div class="descripcion">Choco almendras</div>
-                    </div>           
-                </article>
-                <article>
-                    <% if(userLogin != undefined){%>
-                        <a href="/products"><img class="fotos" src="/img/popu-8.jpg" alt="Foto 8"></a>
-                    <%}else{%>
-                        <a href="/login"><img class="fotos" src="/img/popu-8.jpg" alt="Foto 8"></a>
-                    <%}%>
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-                    <div class="info-producto">
-                        <div class="descripcion">Helado</div>
-                    </div>           
-                </article>
-            </div>       
         </section>
         <section>
             <h4 class="titular-pedido">Ubicacion locales</h4>
