--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -15,7 +15,7 @@
                 <% if(!product.imagen){%>
                     <img src="/img/popu-7.jpg" alt="Foto default" >
                 <%}else{%>
-                  <img src="<%= product.imagen%>" alt="Foto producto" > 
+                    <img src="/img/product/<%= product.imagen%>" alt="Foto producto" > 
                 <%}%>
             </div>
             <div class="info">
