--- a/public/css/login.css
+++ b/public/css/login.css
@@ -7,13 +7,15 @@
     font-family: "artifact";
     src: url(/public/css/Artifact.otf);
 }
+
+
 .formulario-login{
     background-color: rgba(0, 0, 0, .1);
 	background-image: url("/img/fondoLogin.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	background-attachment: scroll;
-    height: 70vh;
+    height: 40vh;
     width: 100vw;
     padding-top: 20px;
 }
@@ -60,9 +62,9 @@ form.formulario div {
     background-color: #D92B4B;
     width: 40%;
     margin:  10px auto;
-    padding: 5px;
+    padding: 10px;
     border-radius: 8px;
-    height: 18%;
+    height: 23%;
     font-size: 700;
     
 }
@@ -131,15 +133,26 @@ input:Focus:invalid {
     .formulario{
         width: 70%;
     }
-    .no-tienes-cuenta{
-        width: 30%;
-        height: 20%;
+
+    /* .no-tienes-cuenta{
+        width: 13%;
+        height: 11%;
         
-    }
+    } */
 
 
 }
 
+
+@media(min-width:500px){
+    
+    
+    .no-tienes-cuenta{
+        width: 30%; 
+    }
+
+
+}
 
 
 @media(min-width:769px){
@@ -154,10 +167,23 @@ input:Focus:invalid {
         width: 40%;
     }
     .no-tienes-cuenta{
-        width: 20%;
-        height: 20%;
+        width: 25%;
+        height: 23%;
         
     }
 
     
 }
+
+
+@media(min-width:1000px){
+    .no-tienes-cuenta{
+        width: 15%;
+        height: 23%;
+        
+    }
+
+    
+}
+
+
