--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,8 +14,9 @@ body{
 }
 
 img.fotos{
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 150px;
+    max-width: 80%;
+    border-radius: 12px;
 }
 
 @font-face{
@@ -38,6 +39,10 @@ img.fotos{
         <li><a href="/#">ALFAJORES<a></li>
     </ul>
 </nav>*/
+
+.userLogin{
+    text-align: center;
+}
 
 nav.barra-nav ul.opciones li a:hover{
     color: #730E16;
@@ -110,7 +115,7 @@ div.truck{
 }
 
 
-main section.productos-populares article img:hover {
+main section.productos-populares article img .fotos:hover {
     box-shadow: 0px 0px 20px rgb(100, 100, 100);
 }
 
@@ -164,6 +169,14 @@ div.productos{
     width: 100%;
 }
 
+section.pedido-hoy{
+    background-image: url("/img/BANNER_QUE VAS A PEDIR.jpg");
+    z-index: 1;
+    background-repeat: no-repeat;
+	background-size: 100%;
+}
+
+
 
 
 section.productos-populares{
@@ -184,10 +197,10 @@ main section.productos-populares article{
     width: 35%;
 }
 
-main section.productos-populares article img{
+main section.productos-populares article img .fotos{
     width: 45vw;
     height: 20vh;
-    border-radius: 5%;
+    border-radius: 12px;
 }
 
 div.pedido-productos{
@@ -423,7 +436,7 @@ div.map-responsive-textos{
 /*footer*/
 footer{
     padding: 63px 35px 35px;
-    height: 450px;
+    height: 70vh;
 }
 
 div.bottom-footer{
@@ -444,12 +457,40 @@ footer div.bottom-footer i{
 
 }
 
+.facebook-icono{
+    width: 32px;
+}  
+
+.instagram-icono{
+    width: 32px;
+}    
+
+.debit-card-icono{
+    width: 32px;
+}
+
+.terms-and-conditions-icono{
+    width: 32px;
+}
 
 
+.conversation-icono{
+    width: 40px;
+}
+
+.people-icono{
+    width: 40px;
+}
+
+img.cart-icono{
+    width: 45px;
+}
 /*MEDIA*/
 
-@media (min-width:360px) {
-
+@media (min-width:600px) {
+img.fotos{
+    max-height: 200px;
+}
 }
 
 
@@ -486,9 +527,19 @@ div.bottom-footer{
     justify-content: space-around;
 }
 
+footer{
+    height: 200px;
+    padding: 63px 35px 35px;
+}
+
 }
 
 @media(min-width:800px){
+img.fotos{
+    max-height: 196px;
+    max-width: 100%;
+    border-radius: 12px;
+}
 .logo-1{
     display: block;
     height: 170px;
@@ -537,7 +588,7 @@ div.carrito{
     margin: 0 10px;
 }
 
-main section.productos-populares article img {
+main section.productos-populares article img .fotos{
     width: 45vw;
     height: 35vh;
     border-radius: 5%;
@@ -571,6 +622,7 @@ nav.barra-nav{
 .fotos-pedido{
     height: 100%;
     width: 100%;
+    border-radius: 12px;
 
 }
 div.pedido-productos {
