--- a/src/views/products/listProductsBuscar.ejs
+++ b/src/views/products/listProductsBuscar.ejs
@@ -18,7 +18,7 @@
                     <% if(!productos[i].imagen){%>
                         <a href="/products/<%= productos[i].id_producto %>" class="hiper-fotos"><img  src="/img/popu-7.jpg" alt="Foto default" class='fotos-grilla'></a>
                     <%}else{%>
-                        <a href="/products/<%= productos[i].id_producto %>" class="hiper-fotos"><img  src="img/product/<%= productos[i].imagen%>" alt="Foto Productos" class='fotos-grilla'></a>  
+                        <a href="/products/<%= productos[i].id_producto %>" class="hiper-fotos"><img  src="/img/product/<%= productos[i].imagen%>" alt="Foto Productos" class='fotos-grilla'></a>  
                     <%}%>
                         <div class="info-producto-grilla">
                         <div class="truck-grilla"><i class="fa-solid fa-truck"></i></div>
